--- a/style.css
+++ b/style.css
@@ -216,7 +216,7 @@
 				position:relative;
 				margin-bottom:10px;
 				color:white;
-				margin-left:120px;
+				margin-left:9%;
                 font-size: 40px;
             }
 			.c h2
@@ -260,7 +260,7 @@
 				float:right;   
 				border: 1px solid rgba(230, 230, 230, 0.68);
 				position:absolute;
-                margin-left: 830px;
+                margin-left: 61%;
             }
 			.h2
 			{
@@ -318,7 +318,7 @@
                 height: auto;
 				position:absolute;
 				margin-top:180px;
-                margin-left: 830px;
+                margin-left: 61%;
                 text-align: center;
             }
 			.ddd
@@ -327,8 +327,8 @@
                 background-color:white;
                 height: auto;
 				position:absolute;
-				margin-top:510px;
-                margin-left: 830px;
+				margin-top:460px;
+                margin-left: 61%;
                 text-align: center;
             }
 			.facd
@@ -355,7 +355,7 @@
 				margin-bottom:10px;
 				position:relative;
 				display:flex; 
-				margin-left:120px;
+				margin-left:9%;
             }
 			.etop
 			{
@@ -526,7 +526,7 @@
 				margin-bottom:10px;
 				padding:10px 10px;
 				position:relative;
-				margin-left:120px;
+				margin-left:9%;
             }
 			.ftext a
 			{
@@ -626,7 +626,7 @@
             {
                 width: 50%;
                 background-color:white;
-                margin-left: 120px;
+				margin-left:9%;
 				margin-bottom:10px;
 				padding:10px 10px;
 				display:block;
@@ -678,8 +678,8 @@
                 background-color:white;
                 height: auto;
 				position:absolute;
-				margin-top:780px;
-                margin-left: 830px;
+				margin-top:730px;
+                margin-left: 61%;
             }
 			.p
             {
@@ -687,8 +687,8 @@
                 background-color:white;
                 height: auto;
 				position:absolute;
-				margin-top:1430px;
-                margin-left: 830px;
+				margin-top:1400px;
+                margin-left: 61%;
                 text-align: center;
                 font-size: 30px;
             }
@@ -698,8 +698,8 @@
                 background-color:white;
                 height: auto;
 				position:absolute;
-				margin-top:1760px;
-                margin-left: 830px;
+				margin-top:1640px;
+                margin-left: 61%;
                 text-align: center;
                 font-size: 30px;
             }
@@ -710,7 +710,7 @@
                 height: auto;
 				position:absolute;
 				margin-top:1895px;
-                margin-left: 830px;
+                margin-left: 61%;
                 text-align: center;
                 font-size: 30px;
             }
@@ -725,7 +725,7 @@
 				text-decoration:none;
 				width:170px;
 				margin-bottom:20px;
-				margin-left: 617px;
+				margin-left: 46%;
 				text-align: center;
 				font-size: 20px;  
 				transition: all 1s ease-out;
@@ -763,13 +763,13 @@
                 height: auto;
 				margin-bottom:10px;
 				margin-top:10px;
-				margin-left:120px; 
+				margin-left:9%;
 				padding:10px;
             }
 			.ddImg
 			{
-				height:250px;
-				width:380px;
+				height:200px;
+				width:300px;
 			}
 			.kImg
 			{
@@ -882,6 +882,11 @@
 				font-size:25px;
 				text-decoration: none;
 			}
+			th
+			{
+				padding:12px;
+				
+			}
 			.fac:hover 
 			{
 				transform: scale(1.05);
@@ -936,7 +941,7 @@
 				color:#333;
 				padding:10px 10px;
 				margin-bottom:10px; 
-				margin-left:120px;
+				margin-left:9%;
 			}
 			.postheading
 			{
@@ -974,6 +979,8 @@
 				margin-left:150px;
 				width:300px;
 				height:250px;
+				float:left;
+				margin:0px 15px 20px 0px;
 			}
 			.posti
 			{
@@ -1018,7 +1025,7 @@
 				text-align: center;
 				line-height:40px;
 				padding:2px 10px;
-				margin:2px;
+				margin:2px 2px 2px 2px;
 				font-size:25px;
 				text-decoration: none;
 			}
@@ -1031,7 +1038,7 @@
 				line-height:40px;
 				transition:.5s;
 				padding:2px 10px;
-				margin-top:20px;
+				margin:-10px 2px 2px 2px;
 				font-size:25px;
 				text-decoration: none;
 			}
@@ -1096,4 +1103,31 @@
 			{
 				width:90%;
 				height:400px;
+			}
+			.mm
+			{
+				text-align:center;
+				display:inline;
+				margin-top:5px;
+				font-size:15px;
+			}
+			.v1
+			{
+				left:10%;
+			}
+			.v2
+			{
+				left:20%;
+			}
+			.v3
+			{
+				left:30%;
+			}
+			.v4
+			{
+				left:40%;
+			}
+			.v5
+			{
+				left:50%;
 			}
